--- a/style.css
+++ b/style.css
@@ -304,6 +304,9 @@ body {
 #main__img{
     width: 100%;
     height: 100%;
+
+    min-width: 450px;
+    min-height: 450px;
 }
 
 /* Mobile Responsive */
@@ -332,6 +335,15 @@ body {
     .main__content p {
         margin-top: 1rem;
         font-size: 1.5rem;
+    }
+
+    #main__img{
+        width: 420px;
+        height: 420px;
+
+        position: absolute;
+        top: 72%;
+        left: 0; 
     }
 }
 
@@ -363,7 +375,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 40px;
 }
 
 .services h1 {
@@ -377,7 +388,7 @@ body {
         #b12a5b 100%
     );
     background-size: 100%;
-    margin-bottom: 5rem;
+    margin-bottom: 3.5rem;
     font-size: 2.5rem;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -403,7 +414,10 @@ body {
     ),
     url('img/exp1.jpg');
     background-size: cover;
+
     position: relative;
+    bottom: 40px;
+    
     color: #fff;
 }
 
@@ -496,6 +510,7 @@ body {
     font-size: 2rem;
 }
 
+
 .footer__links {
     width: 100%;
     max-width: 1000px;
@@ -532,7 +547,7 @@ body {
 }
 
 .footer__link--items a:hover {
-    color: #e9e9e9;
+    color: #ff8177;
     transition: 0.3s ease-out;
 }
 
@@ -540,6 +555,10 @@ body {
 .social__icon--link {
     color: #fff;
     font-size: 24px
+}
+
+.social__icon--link:hover {
+    color: #ff8177;
 }
 
 .social__media {
